force-app/main/default/objects/bpats__ATS_Log__c/bpats__ATS_Log__c.object-meta.xml
<CustomObject>
    <label>ATS Log</label>
    <nameField>
        <displayFormat>Log-{YYYY}{MM}/{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>