force-app/main/default/objects/bpats__ATS_Log__c/fields/bpats__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>