force-app/main/default/objects/bpats__ATS_Log__c/fields/bpats__Error_Stack_trace__c.field-meta.xml
<CustomField>
    <fullName>bpats__Error_Stack_trace__c</fullName>
    <label>Error Stack trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>