force-app/main/default/objects/bpats__ATS_Log__c/fields/bpats__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>bpats__Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>