force-app/main/default/objects/bpats__ATS_Log__c/fields/bpats__Log_Message__c.field-meta.xml
<CustomField>
    <fullName>bpats__Log_Message__c</fullName>
    <label>Log Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>