force-app/main/default/objects/bpats__ATS_Log__c/fields/bpats__Method_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Method_Name__c</fullName>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>