force-app/main/default/objects/bpats__ATS_Log__c/fields/bpats__Preserve_Log__c.field-meta.xml
<CustomField>
    <fullName>bpats__Preserve_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Log</label>
    <type>Checkbox</type>
</CustomField>