force-app/main/default/objects/bpats__ATS_Log__c/fields/bpats__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>bpats__Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>