force-app/main/default/objects/bpats__ATS_Log__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>bpats__Log_Type__c</columns>
    <columns>bpats__Class_Name__c</columns>
    <columns>bpats__Log_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>